# crawl4ai

./: .gitignore  docker-compose.workspace.yml
crawl4ai/: async_dispatcher.py  async_url_seeder.py  async_webcrawler.py
crawl4ai/processors/pdf/: __init__.py
docs/: API_USAGE.md  crawl4ai_custom_context.md
services/browser-service/src/browser_service/: api.py  browser_manager.py
services/browser-service/tests/: conftest.py  test_browser_manager.py
services/content-filter-service/: Dockerfile  README.md  pyproject.toml
services/content-filter-service/src/content_filter_service/: __init__.py  main.py
services/content-scraping-service/src/content_scraping_service/: api.py  scraper.py
services/content-scraping-service/tests/: conftest.py  test_scraper.py
services/deep-crawl-service/: Dockerfile  README.md  pyproject.toml
services/deep-crawl-service/src/deep_crawl_service/: __init__.py  crawler.py  main.py
services/deep-crawl-service/tests/: test_api.py  test_crawler.py
services/extraction-service/: Dockerfile  README.md  pyproject.toml
services/extraction-service/src/extraction_service/: __init__.py  extractor.py  main.py
services/markdown-service/: Dockerfile  README.md  pyproject.toml
services/markdown-service/src/markdown_service/: __init__.py  generator.py  main.py
services/markdown-service/tests/: test_api.py  test_generator.py
services/url-discovery-service/: Dockerfile  README.md  pyproject.toml
shared/schemas/: content_filter_schemas.py  deep_crawl_schemas.py  extraction_schemas.py  markdown_schemas.py  url_discovery_schemas.py
(+4 files in other folders)
